# react-r

./: .gitignore  README.md  package-lock.json  package.json
.opencode/plans/: movie-list-site.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/components/: CommentSection.jsx  MovieSearchInput.jsx  Navbar.jsx  StarRating.jsx
client/src/lib/: api.js  auth.jsx
client/src/pages/: CreateList.jsx  Home.jsx  ListDetail.jsx  Login.jsx  NotFound.jsx  Register.jsx  UserDetail.jsx
server/: .sample.env  alembic.ini  main.py  pyproject.toml
server/app/: auth.py  config.py  db.py  models.py  schemas.py
server/app/routes/: auth.py  lists.py  movies.py  users.py
server/migrations/: env.py
server/migrations/versions/: 281de3af4efc_favorite_lists.py  981f034164a2_init.py
