[project]
name = "react-r-be"
version = "0.1.0"
description = "Movie list site backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
]